syntax = "proto3";

package usermgmt;

service UserManagement {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetListUser(Empty) returns (GetListUserResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc GetCurrentUser(Empty) returns (GetCurrentUserResponse);
}

message Empty {}

message User {
    string email = 1;
    string name = 2;
    string avt = 3;
    string role = 4;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
    string role = 4;
    string avt = 5;
}

message RegisterResponse {
    string msg = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message GetListUserResponse {
    repeated User users = 1;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message RefreshTokenResponse {
    string accessToken = 1;
    string refreshToken = 2; 
}

message GetCurrentUserResponse {
    User user = 1;
}